# Rflap

./: .gitignore  Cargo.toml  Dockerfile  README.md  cfg.rs  d  finite_automaton.rs  main.rs  package-lock.json  pda.rs  reg_exp.rs  tm.rs
.github/workflows/: dockerimage-ci.yml  dockerimgae-cd-master.yml  update-autograder.yml
client/: package-lock.json  package.json
client/src/: App.css  App.js  HeaderMenu.js  PushNode.js  Run.css
front/: package-lock.json  package.json
front/public/: index.html  manifest.json
front/src/: App.css  App.js  App.tsx  AutomataContext.js  CFG_Visual.css  CFG_Visual.js  HeaderMenu.css  HeaderMenu.js  NotPopUp.js  PDA_Visual.js  PlusButton.js  Regex.css  Regex.js  RowEntry.js  RowInput.js  Rule.css  Rule.js  Run.css  Run.js  Visual.css  Visual.js  grammar_implementation.js  index.css  serviceWorker.tsx
front/src/components/: AutomataContext.tsx  HeaderMenu.tsx  NotPopUp.tsx  PlusButton.tsx  PushNode.tsx  RowInput.tsx  Run.css  Run.tsx  Visual.tsx
front/src/res/: HexColors.js  MemoryTests.js  NetworkOptions.js
src/: #finite_automaton.rs#  #main.rs#  .#finite_automaton.rs  .#main.rs  cfg.rs  cfgs.rs  deterministic_finite_automaton.rs  finite_automaton.rs  finite_automaton_json.rs  finite_automaton_json.rs~  generate_tests.rs  generate_tests.rs~  main.rs  nondeterministic_finite_automaton.rs  pda.rs  reg_exp.rs  tm.rs
temp-api/: package-lock.json  package.json  tsconfig.json
temp-api/src/: server.ts
test/: test.http
