[package]
name = "automata"
version = "0.1.0"
authors = ["Misha Ryabko (Reisande) <mryabk2@uic.edu>"]
edition = "2018"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quick-xml = "0.17.0"
rand = "0.7.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.41"
rocket = "0.4.2"
multimap = "0.8.0"

[dependencies.rocket_contrib]
version = "0.4.2"
default-features = false
features = ["json"]