[package]
name = "automata"
version = "0.2.0"
authors = ["Misha Ryabko (https://github.com/Reisande)", "<mryabk2@uic.edu>, Chris Cortina (https://github.com/heldeo) <ccorti2@uic.edu>"]
edition = "2018"

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
debug = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.41"
multimap = "0.8.0"
earlgrey = "0.3.0"